--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
   </div>
 
-  <footer>Made by — MR TARUN</footer>
+  <footer>Made by — MR GURU</footer>
 
   <script>
     async function loadScript(url, timeout = 8000) {
@@ -286,7 +286,7 @@
           <p><strong>Service:</strong> ${currentPaymentTitle}</p>
           <p><strong>Username/Link:</strong> ${userValue}</p>
           <p>💾 Saved in our system. Your service will be provided shortly.</p>
-          <a href="https://yourwebsite.com" target="_blank" style="color:#0b84ff; font-weight:bold;">SSM BOOSTER</a>
+          <a href="https://socialmediabooster12.github.io/SMB/" target="_blank" style="color:#0b84ff; font-weight:bold;">SM BOOSTER</a>
         `;
       };
     }
@@ -295,3 +295,4 @@
   </script>
 </body>
 </html>
+
