--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     const products = [
       {id:'instafollowers', name:'1k Instagram Followers', price:15, desc:'1k followers instantly'},
       {id:'insta10k', name:'10k Instagram Followers', price:149, desc:'10k followers instantly'},
+	  {id:'instag10k', name:'10k Instagram Reels Veiws', price:49, desc:'10k Instagram Reels Veiws instantly'},
       {id:'fbFollowers', name:'1k Facebook Followers', price:20, desc:'Increase your Facebook followers instantly'},
       {id:'fb10k', name:'10k Facebook Followers', price:199, desc:'Increase your Facebook followers instantly'},
       {id:'ytSubscribers', name:'1000 YouTube Subscribers', price:49, desc:'Boost your YouTube channel with real-looking subscribers'},
@@ -295,4 +296,5 @@
   </script>
 </body>
 </html>
+
 
