--- a/index.html
+++ b/index.html
@@ -403,10 +403,10 @@
 
         confirmation.style.display = 'block';
         confirmation.innerHTML = `
-          <p>✅ Your payment request has been submitted.</p>
+          <p>❌PAYMENT IS NOT COMPLETED .</p>
           <p><strong>Service:</strong> ${currentPaymentTitle}</p>
           <p><strong>Username/Link:</strong> ${userValue}</p>
-          <p>💾 Saved in our system. Your service will be provided shortly.</p>
+          <p>PLEASE PAY ON THE QR .</p>
           <a href="https://socialmediabooster12.github.io/SMB/" target="_blank" style="color:#0b84ff; font-weight:bold;">SM BOOSTER</a>
         `;
       };
@@ -418,4 +418,5 @@
   </script>
 </body>
 </html>
+
 
